[Update] error in duplicate words in lexicon

--- a/Treetagger.ipynb
+++ b/Treetagger.ipynb
@@ -826,6 +826,29 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "\n",
+    "train-tree-tagger -cl 2 -dtg 0.50 -sw 1.00 -ecw 0.15 -atg 1.20 .\\\\lexicon\\\\lexicon.txt .\\\\input\\\\input_file.txt .\\\\lexicon\\\\input_file.txt .\\\\output_file\n",
+    "\n",
+    "\treading the lexicon ...\n",
+    "\t\treading the tagset ...\n",
+    "\t\treading the lemmas ...\n",
+    "\t\treading the entries ...\n",
+    "\t\tsorting the lexicon ...\n",
+    "\n",
+    "ERROR: Two lexicon entries for word form \"!\"!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "above we can notice that we have duplicate entries for the word \"!\" , so we have to do performe prétraotment on our LEXICON file and erase the deplicate words"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
