[ADD]some explication for the deplication error

--- a/Treetagger.ipynb
+++ b/Treetagger.ipynb
@@ -845,8 +845,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "above we can notice that we have duplicate entries for the word \"!\" , so we have to do performe prétraotment on our LEXICON file and erase the deplicate words"
+    "above we can notice that we have duplicate entries for the word \"!\" , so we have to do performe prétraotment on our LEXICON file and erase the deplicate words\n",
+    "\n",
+    "we have to respect this format\n",
+    "\n",
+    "abandoned______JJ_______abandoned________VBD______abandon_________VBN abandon\n",
+    "\n",
+    "instead of ysing this \n",
+    "abandoned____JJ____abandoned\t\n",
+    "abandoned____VBD____abandon\t\n",
+    "abandoned____VBN____abandon\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
