--- a/Treetagger.ipynb
+++ b/Treetagger.ipynb
@@ -968,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -996,9 +996,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 171,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['The', 'AT', 'the', 'AT-TL', 'the']\n",
+      "['Fulton', 'NP-TL', 'fulton', 'NP', 'fulton']\n",
+      "['County', 'NN-TL', 'county']\n",
+      "['Grand', 'JJ-TL', 'grand']\n",
+      "['Jury', 'NN-TL', 'jury']\n",
+      "['said', 'VBD', 'say', 'VBN', 'say']\n",
+      "['Friday', 'NR', 'friday']\n",
+      "['an', 'AT', 'an']\n",
+      "['investigation', 'NN', 'investigation']\n",
+      "['of', 'IN', 'of', 'IN-TL', 'of', 'IN-HL', 'of']\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(0,10):\n",
     "    print(word_tagged_list_no_duplication[i])"
