[ERROR] open class file

--- a/Treetagger.ipynb
+++ b/Treetagger.ipynb
@@ -1023,6 +1023,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lexicon= open(\".\\\\lexicon\\\\lexicon.txt\",\"w+\")\n",
+    "for token in word_tagged_list_no_duplication:\n",
+    "    lexicon.write(token[0]+\"\\t\"+token[1]+\" \"+token[2])\n",
+    "    for i in range(3,len(token)-1,2):\n",
+    "        lexicon.write(\" \"+token[i]+\" \"+token[i+1])\n",
+    "    lexicon.write(\"\\n\")\n",
+    "\n",
+    "lexicon.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "train-tree-tagger -cl 2 -dtg 0.50 -sw 1.00 -ecw 0.15 -atg 1.20 .\\\\lexicon\\\\lexicon.txt .\\\\class\\\\class_tags.txt .\\\\input\\\\input_file.txt .\\\\output_file\n",
+      "\n",
+      "\treading the lexicon ...\n",
+      "\t\treading the tagset ...\n",
+      "\t\treading the lemmas ...\n",
+      "\t\treading the entries ...\n",
+      "\t\tsorting the lexicon ...\n",
+      "\t\treading the open class tags ...\n",
+      "\n",
+      "ERROR: unknown tag <FW> !\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "! train-tree-tagger -st . .\\\\lexicon\\\\lexicon.txt .\\\\class\\\\class_tags.txt .\\\\input\\\\input_file.txt  .\\\\output_file"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
