[FIX]Organizing the code and the comments

--- a/Treetagger.ipynb
+++ b/Treetagger.ipynb
@@ -939,6 +939,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Prepare our Tokens in a list"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 169,
    "metadata": {},
@@ -964,6 +971,13 @@
     "\n",
     "for i in range(0,5):\n",
     "    print(word_tagged_list[i])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Implimentation of the function"
    ]
   },
   {
@@ -995,6 +1009,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Verification"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 171,
    "metadata": {},
@@ -1022,8 +1043,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Recrating the lexicon file"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1035,6 +1063,13 @@
     "    lexicon.write(\"\\n\")\n",
     "\n",
     "lexicon.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Start training TreeTagger"
    ]
   },
   {
