--- a/Treetagger.ipynb
+++ b/Treetagger.ipynb
@@ -12,27 +12,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'CategorizedTaggedCorpusReader' object has no attribute 'tags'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-25-a8dc835db801>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbrown\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtags\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'CategorizedTaggedCorpusReader' object has no attribute 'tags'"
-     ]
-    }
-   ],
-   "source": [
-    "print(brown.tags())"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -638,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -820,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -881,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -889,10 +868,10 @@
      "output_type": "stream",
      "text": [
       "phrases_\n",
-      "[['word0', 'tag', 'lemma'], ['word0', 'tag', 'lemma'], ['word0', 'tag', 'lemma'], ['word0', 'tagalpha', 'lemma'], ['word0', 'tagalpha', 'lemma'], ['word0', 'tagalpha', 'lemma'], ['word0', 'tagalpha', 'lemma'], ['word0', 'tagalpha', 'lemma'], ['word0', 'tag', 'lemmaalpha'], ['word0', 'tag', 'lemma'], ['word1', 'tag', 'lemma'], ['word2', 'tag', 'lemma'], ['word3', 'tag', 'lemma'], ['word4', 'tag', 'lemma']]\n",
+      "[['word0', 'tag', 'lemma'], ['word0', 'tag', 'lemma'], ['word0', 'tag', 'lemma'], ['word0', 'tagalpha', 'lemma1'], ['word0', 'tagalpha', 'lemma'], ['word0', 'tagalpha', 'lemma'], ['word0', 'tagalpha', 'lemma'], ['word0', 'tagalpha', 'lemma'], ['word0', 'tag', 'lemma'], ['word0', 'tag', 'lemma0'], ['word1', 'tag', 'lemma1'], ['word2', 'tag', 'lemma2'], ['word3', 'tag', 'lemma3'], ['word4', 'tag', 'lemma4']]\n",
       "\n",
       "phrases_no_duplication\n",
-      "[['word0', 'tag', 'lemma', 'tagalpha', 'lemma', 'tag', 'lemmaalpha'], ['word1', 'tag', 'lemma'], ['word2', 'tag', 'lemma'], ['word3', 'tag', 'lemma'], ['word4', 'tag', 'lemma']]\n"
+      "[['word0', 'tag', 'word0', 'tagalpha', 'lemma'], ['word0', 'tagalpha', 'word1', 'tag', 'lemma1'], ['word0', 'tag', 'lemma0'], ['word2', 'tag', 'lemma2'], ['word3', 'tag', 'lemma3'], ['word4', 'tag', 'lemma4']]\n"
      ]
     }
    ],
@@ -901,7 +880,7 @@
     "phrases_.append([\"word0\",\"tag\",\"lemma\"])\n",
     "phrases_.append([\"word0\",\"tag\",\"lemma\"])\n",
     "phrases_.append([\"word0\",\"tag\",\"lemma\"])\n",
-    "phrases_.append([\"word0\",\"tagalpha\",\"lemma\"])\n",
+    "phrases_.append([\"word0\",\"tagalpha\",\"lemma1\"])\n",
     "phrases_.append([\"word0\",\"tagalpha\",\"lemma\"])\n",
     "phrases_.append([\"word0\",\"tagalpha\",\"lemma\"])\n",
     "\n",
@@ -909,10 +888,10 @@
     "\n",
     "phrases_.append([\"word0\",\"tagalpha\",\"lemma\"])\n",
     "\n",
-    "phrases_.append([\"word0\",\"tag\",\"lemmaalpha\"])\n",
+    "phrases_.append([\"word0\",\"tag\",\"lemma\"])\n",
     "\n",
     "for i in range(0,5):\n",
-    "    phrases_.append([\"word\"+str(i),\"tag\",\"lemma\"])\n",
+    "    phrases_.append([\"word\"+str(i),\"tag\",\"lemma\"+str(i)])\n",
     "print(\"phrases_\")\n",
     "print(phrases_)\n",
     "print()\n",
@@ -923,16 +902,16 @@
     "    length = len(phrases_no_duplication)\n",
     "    cnt=0\n",
     "    for phrase_no_duplication in phrases_no_duplication:\n",
-    "        if token[0] == phrase_no_duplication[0]:\n",
-    "            future_length=3\n",
-    "            for i in range(1,len(phrase_no_duplication)-1,2):\n",
-    "                if (token[1]!=phrase_no_duplication[i] or token[2]!=phrase_no_duplication[i+1]):\n",
-    "                    future_length=future_length+2\n",
-    "            if future_length!=len(phrase_no_duplication):\n",
+    "        if token[-1] == phrase_no_duplication[-1]:\n",
+    "            if token[1] not in phrase_no_duplication :\n",
+    "                #word\n",
+    "                lemma = phrase_no_duplication[-1]\n",
+    "                del phrase_no_duplication[-1]\n",
+    "                phrase_no_duplication.append(token[0])\n",
     "                #tag\n",
     "                phrase_no_duplication.append(token[1])\n",
     "                #lemma\n",
-    "                phrase_no_duplication.append(token[2])\n",
+    "                phrase_no_duplication.append(lemma)\n",
     "                \n",
     "        else:\n",
     "                cnt = cnt+1\n",
@@ -952,21 +931,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['The', 'AT', 'the']\n",
-      "['Fulton', 'NP-TL', 'fulton']\n",
-      "['County', 'NN-TL', 'county']\n",
-      "['Grand', 'JJ-TL', 'grand']\n",
-      "['Jury', 'NN-TL', 'jury']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "word_tagged_list = []\n",
     "for phrase in phrases:\n",
@@ -987,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -997,16 +964,18 @@
     "    length = len(word_tagged_list_no_duplication)\n",
     "    cnt=0\n",
     "    for word_tagged_no_duplication in word_tagged_list_no_duplication:\n",
-    "        if token[0] == word_tagged_no_duplication[0]:\n",
-    "            future_length=3\n",
-    "            for i in range(1,len(word_tagged_no_duplication)-1,2):\n",
-    "                if (token[1]!=word_tagged_no_duplication[i] or token[2]!=word_tagged_no_duplication[i+1]):\n",
-    "                    future_length=future_length+2\n",
-    "            if future_length!=len(word_tagged_no_duplication):\n",
+    "        if token[-1] == word_tagged_no_duplication[-1]:\n",
+    "            if token[1] not in word_tagged_no_duplication :\n",
+    "                \n",
+    "                lemma = word_tagged_no_duplication[-1]\n",
+    "                del word_tagged_no_duplication[-1]\n",
+    "                #word\n",
+    "                word_tagged_no_duplication.append(token[0])\n",
     "                #tag\n",
     "                word_tagged_no_duplication.append(token[1])\n",
     "                #lemma\n",
-    "                word_tagged_no_duplication.append(token[2])\n",
+    "                word_tagged_no_duplication.append(lemma)\n",
+    "\n",
     "        else:\n",
     "                cnt = cnt+1\n",
     "    if length == cnt:\n",
@@ -1022,28 +991,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['The', 'AT', 'the', 'AT-TL', 'the']\n",
-      "['Fulton', 'NP-TL', 'fulton', 'NP', 'fulton']\n",
-      "['County', 'NN-TL', 'county']\n",
-      "['Grand', 'JJ-TL', 'grand']\n",
-      "['Jury', 'NN-TL', 'jury']\n",
-      "['said', 'VBD', 'say', 'VBN', 'say']\n",
-      "['Friday', 'NR', 'friday']\n",
-      "['an', 'AT', 'an']\n",
-      "['investigation', 'NN', 'investigation']\n",
-      "['of', 'IN', 'of', 'IN-TL', 'of', 'IN-HL', 'of']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for i in range(0,10):\n",
+    "for i in range(0,100):\n",
     "    print(word_tagged_list_no_duplication[i])"
    ]
   },
@@ -1056,15 +1008,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "lexicon= open(\".\\\\lexicon\\\\lexicon.txt\",\"w+\")\n",
     "for token in word_tagged_list_no_duplication:\n",
-    "    lexicon.write(token[0]+\"\\t\"+token[1]+\" \"+token[2])\n",
-    "    for i in range(3,len(token)-1,2):\n",
-    "        lexicon.write(\" \"+token[i]+\" \"+token[i+1])\n",
+    "    lexicon.write(token[0]+\"\\t\"+token[1])\n",
+    "    for i in range(2,len(token),1):\n",
+    "        lexicon.write(\" \"+token[i])\n",
     "    lexicon.write(\"\\n\")\n",
     "\n",
     "lexicon.close()"
@@ -1079,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1119,7 +1071,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
