--- a/Treetagger.ipynb
+++ b/Treetagger.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Project NLP TreeTagger :\n",
+    "## Trinôme : GROUP 1\n",
+    "### - Yasmine ATMANIOU - MLDS\n",
+    "### - Ahmed Seyfeddine GOUMEIDA - MLDS\n",
+    "### - Mohammed Erifai MAAMIR - MLDS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# ----------------------------Help--------------------------------"
    ]
   },
