--- a/Treetagger.ipynb
+++ b/Treetagger.ipynb
@@ -5,10 +5,10 @@
    "metadata": {},
    "source": [
     "# Project NLP TreeTagger :\n",
-    "## Trinôme : GROUP 1\n",
+    "## Trinôme : Group 1\n",
     "### - Yasmine ATMANIOU - MLDS\n",
-    "### - Ahmed Seyfeddine GOUMEIDA - MLDS\n",
-    "### - Mohammed Erifai MAAMIR - MLDS"
+    "### - Mohammed Erifai MAAMIR - MLDS\n",
+    "### - Ahmed Seyfeddine GOUMEIDA - MLDS\n"
    ]
   },
   {
